# TensorLib

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  setup.py  vcpkg.json
TensorLib/: CMakeLists.txt  Dockerfile  zelbo  zelbo.pub
TensorLib/src/: main.cpp
TensorLib/src/domain/: Batch.h  Convolution.h  DefaultTypes.h  Linear.h  Module.h  Tensor.h
TensorLib/src/logic/: CMakeLists.txt  FunctionalProgAlgos.hpp  FunctionalProgrammingAlgos.hpp  ModuleAlgorithms.hpp  ParallelAlgorithms.hpp  TensorAlgorithms.cpp  TensorAlgorithms.h  TensorAlgorithms.hpp
TensorLib/src/tests/: CMakeLists.txt  LinearTests.cpp  ModuleAlgorithmsSpec.cpp  TensorAlgosSpec.cpp  TensorIteratorSpec.cpp  TensorSpec.cpp
include/old_tensor_impl/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/domain/: Batch.h  Module.h  Tensor.h
src/logic/: CMakeLists.txt  FunctionalProgrammingAlgos.hpp  ModuleAlgorithms.hpp  ParallelAlgorithms.hpp  TensorAlgorithms.cpp  TensorAlgorithms.hpp
src/tests/: CMakeLists.txt  LinearTests.cpp  ModuleAlgorithmsSpec.cpp  TensorAlgosSpec.cpp  TensorIteratorSpec.cpp
test/: CMakeLists.txt  LinearTests.cpp
